[package]
name = "titan-rs"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
description = "Simple game engine based on Rust and Vulkan API"
edition = "2018"
resolver = "2"

[lib]
name = "titan_rs_lib"
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = "0.4.19"
semver = "1.0.4"
lazy_static = "1.4.0"
slotmap = "1.0.5"
log = "0.4.14"
log4rs = "1.0.0"
winit = "0.25.0"
vulkano = "0.25.0"
vulkano-win = "0.25.0"
vulkano-shaders = "0.25.0"
ultraviolet = "0.8.1"
palette = "0.6.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"

pretty_env_logger = { version = "0.4.0", optional = true }
jni = { version = "0.19.0", optional = true }

[features]
jni-export = ["jni", "pretty_env_logger"]
