[package]
name = "titan-engine"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
raw-window-handle = "0.3.3"
log = "0.4.14"
winit = "0.24.0"
exitcode = "1.1.2"
lazy_static = "1.4.0"
regex = "1.5.4"

pretty_env_logger = { version = "0.4.0", optional = true }
jni = { version = "0.19.0", optional = true }

[features]
jni-export = ["jni", "pretty_env_logger"]
