[package]
name = "titan-engine"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
description = "API for simple game engine based on Rust and Vulkan API"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
semver = "1.0.4"
log = "0.4.14"
lazy_static = "1.4.0"
winit = "0.25.0"
vulkano = "0.25.0"
vulkano-win = "0.25.0"
vulkano-shaders = "0.25.0"
glam = "0.17.3"
palette = "0.6.0"

pretty_env_logger = { version = "0.4.0", optional = true }
jni = { version = "0.19.0", optional = true }

[features]
jni-export = ["jni", "pretty_env_logger"]
