[package]
name = "titan_core"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
description = "API for simple game engine based on Rust and Vulkan API"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
semver = "1.0.4"
lazy_static = "1.4.0"
log = "0.4.14"
winit = "0.25.0"
vulkano = "0.25.0"
vulkano-win = "0.25.0"
vulkano-shaders = "0.25.0"
egui_winit_platform = { git = "https://github.com/hasenbanck/egui_winit_platform", features = ["clipboard", "webbrowser"] }
egui = "0.13.1"
ultraviolet = "0.8.1"
palette = "0.6.0"
