[package]
name = "titan_core"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
description = "API for simple game engine based on Rust and Vulkan API"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
semver = "1.0"
lazy_static = "1.4"
log = "0.4"
thiserror = "1.0"
winit = "0.25"
vulkano = "0.25"
vulkano-win = "0.25"
vulkano-shaders = "0.25"
egui_winit_platform = { version = "0.10", features = ["clipboard", "webbrowser"] }
egui = "0.14"
epaint = "0.14"
ultraviolet = "0.8"
palette = "0.6"
