[package]
name = "titan_ecs"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
description = "Simple ECS for simple game engine based on Rust and Vulkan API"
repository = "https://github.com/tuguzT/titan_rs"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
slotmap = "1.0"
anymap2 = "0.13"
