[package]
name = "titan_rs"
version = "0.1.0"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
description = "Simple game engine based on Rust and Vulkan API"
repository = "https://github.com/tuguzT/titan_rs"
readme = "../README.md"
edition = "2021"

[dependencies]
titan_core = { path = "../titan_core" }
chrono = "0.4"
egui = "0.14"
log = "0.4"
log4rs = "1.0"
image = "0.23"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3"
